lab3 ex.2 and fixes of ex.1 (building with docker doesn't work, maybe using Ubuntu 14.04 vm is the only method :( )

--- a/lab3/Makefile
+++ b/lab3/Makefile
@@ -233,7 +233,7 @@ qemu: $(UCOREIMG) $(SWAPIMG)
 qemu-nox: $(UCOREIMG) $(SWAPIMG)
 	$(V)$(QEMU)  -no-reboot -serial mon:stdio $(QEMUOPTS) -nographic
 
-TERMINAL := konsole
+TERMINAL := gnome-terminal
 
 debug: $(UCOREIMG) $(SWAPIMG)
 	$(V)$(QEMU) -S -s -parallel stdio $(QEMUOPTS) -serial null &
